# gli

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  build.sh  manual.md  readme.md
cmake/: gliBuildConfig.cmake.in
gli/: CMakeLists.txt  format.hpp  gl.hpp
gli/core/: duplicate.inl  dx.inl  flip.hpp  flip.inl  format.inl  gl.inl  image.inl  load_dds.inl  load_kmg.inl  load_ktx.inl  save_dds.inl  storage.inl  storage_linear.inl  view.inl
test/: CMakeLists.txt
test/core/: core_convert.cpp  core_flip.cpp  core_texture.cpp  generate_mipmaps_sampler1d.cpp  generate_mipmaps_sampler2d.cpp  test_duplicate.cpp  test_size.cpp  texture_lod_sampler2d.cpp
